restore project on new device

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ PORT=3000
 
 DB_USER=winccuser
 DB_PASSWORD=Wincc@123
-DB_SERVER=ABANOUB\WINCC
+DB_SERVER=MAHMOUD-ELASFOU\WINCC
 DB_DATABASE=parameters
 DB_PORT=1433
 
